@@ -1,3 +1,8 @@
+2009-12-09  Xinliang David Li  <davidxl@google.com>
+
+	PR tree-optimization/42337
+	* g++.dg/tree-ssa/pr42337.C: New test.
+
 2009-12-08  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/41711
